<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/primaryLightColor">

    <ImageView
        android:id="@+id/user_avatar_rv"
        android:layout_width="180dp"
        android:layout_height="115dp"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_person_person"
        android:contentDescription="@string/user_avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_age_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_color_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fav_color"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>